# travel_deals_scraper

./: .pre-commit-config.yaml  LICENSE  README.md  db_utils.py  discordbot.py  email_sender.py  fly_dict.py  pyproject.toml  requirements.txt  scheduler.py  scraper.db  scraper.py  sms_sender.py
