[tool.pdm]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "holiday_scraper_2024"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "A python scraper for travel deals"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
